--- a/package.json
+++ b/package.json
@@ -11,33 +11,38 @@
 		"lint": "prettier --check . && eslint .",
 		"format": "prettier --write .",
 		"test:integration": "playwright test",
-		"test:unit": "vitest"
+		"test:unit": "vitest",
+		"typegen": "pocketbase-typegen --env --out ./src/lib/server/db/pocketbase/types.ts"
 	},
 	"devDependencies": {
-		"@fontsource/fira-mono": "^5.0.13",
-		"@neoconfetti/svelte": "^2.2.1",
-		"@playwright/test": "^1.44.0",
-		"@sveltejs/adapter-auto": "^3.2.0",
-		"@sveltejs/kit": "^2.5.7",
-		"@sveltejs/vite-plugin-svelte": "^3.1.0",
-		"@types/eslint": "^8.56.10",
-		"@typescript-eslint/eslint-plugin": "^7.8.0",
-		"@typescript-eslint/parser": "^7.8.0",
-		"eslint": "^8.57.0",
+		"@fontsource/fira-mono": "^4.5.10",
+		"@neoconfetti/svelte": "^1.0.0",
+		"@playwright/test": "^1.28.1",
+		"@sveltejs/adapter-auto": "^3.0.0",
+		"@sveltejs/kit": "^2.0.0",
+		"@sveltejs/vite-plugin-svelte": "^3.0.0",
+		"@types/eslint": "^8.56.0",
+		"@typescript-eslint/eslint-plugin": "^7.0.0",
+		"@typescript-eslint/parser": "^7.0.0",
+		"eslint": "^8.56.0",
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-svelte": "^2.39.0",
-		"prettier": "^3.2.5",
-		"prettier-plugin-svelte": "^3.2.3",
-		"svelte": "^5.0.0-next.127",
-		"svelte-check": "^3.7.1",
-		"tslib": "^2.6.2",
-		"typescript": "^5.4.5",
-		"vite": "^5.2.11",
-		"vitest": "^1.6.0"
+		"prettier": "^3.1.1",
+		"prettier-plugin-svelte": "^3.1.2",
+		"svelte": "^5.0.0-next.130",
+		"svelte-check": "^3.6.0",
+		"tslib": "^2.4.1",
+		"typescript": "^5.0.0",
+		"vite": "^5.0.3",
+		"vitest": "^1.2.0"
 	},
 	"type": "module",
 	"dependencies": {
 		"cookie": "^0.6.0",
-		"pocketbase": "^0.21.2"
+		"formsnap": "^1.0.0",
+		"pocketbase": "^0.21.2",
+		"pocketbase-typegen": "^1.2.1",
+		"sveltekit-superforms": "^2.13.1",
+		"zod": "^3.23.8"
 	}
 }
