--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
 		"eslint-plugin-svelte": "^2.39.0",
 		"prettier": "^3.1.1",
 		"prettier-plugin-svelte": "^3.1.2",
-		"svelte": "^5.0.0-next.130",
+		"svelte": "^4.2.17",
 		"svelte-check": "^3.6.0",
 		"tslib": "^2.4.1",
 		"typescript": "^5.0.0",
