--- a/package.json
+++ b/package.json
@@ -27,13 +27,15 @@
 		"eslint": "^8.56.0",
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-svelte": "^2.39.0",
+		"pocketbase-typegen": "^1.2.1",
 		"prettier": "^3.1.1",
 		"prettier-plugin-svelte": "^3.1.2",
 		"svelte": "^4.2.17",
 		"svelte-check": "^3.6.0",
-		"tslib": "^2.4.1",
+		"tslib": "^2.6.2",
 		"typescript": "^5.0.0",
 		"vite": "^5.0.3",
+		"vite-plugin-mkcert": "^1.17.5",
 		"vitest": "^1.2.0"
 	},
 	"type": "module",
@@ -41,7 +43,6 @@
 		"cookie": "^0.6.0",
 		"formsnap": "^1.0.0",
 		"pocketbase": "^0.21.2",
-		"pocketbase-typegen": "^1.2.1",
 		"sveltekit-superforms": "^2.13.1",
 		"zod": "^3.23.8"
 	}
