--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 	},
 	"devDependencies": {
 		"@fontsource/fira-mono": "^4.5.10",
+		"@iconify-json/mdi": "^1.1.66",
 		"@neoconfetti/svelte": "^1.0.0",
 		"@playwright/test": "^1.28.1",
 		"@sveltejs/adapter-auto": "^3.0.0",
@@ -34,6 +35,7 @@
 		"svelte-check": "^3.6.0",
 		"tslib": "^2.6.2",
 		"typescript": "^5.0.0",
+		"unplugin-icons": "^0.19.0",
 		"vite": "^5.0.3",
 		"vite-plugin-mkcert": "^1.17.5",
 		"vitest": "^1.2.0"
