--- a/package.json
+++ b/package.json
@@ -42,7 +42,9 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"@date-fns/utc": "^1.2.0",
 		"cookie": "^0.6.0",
+		"date-fns": "^3.6.0",
 		"formsnap": "^1.0.0",
 		"pocketbase": "^0.21.2",
 		"sveltekit-superforms": "^2.13.1",
