--- a/package.json
+++ b/package.json
@@ -49,5 +49,8 @@
 		"pocketbase": "^0.21.2",
 		"sveltekit-superforms": "^2.13.1",
 		"zod": "^3.23.8"
+	},
+	"optionalDependencies": {
+		"@rollup/rollup-linux-x64-gnu": "4.9.5"
 	}
 }
