Add Pico css library and implement styles with it

--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
 	"type": "module",
 	"dependencies": {
 		"@date-fns/utc": "^1.2.0",
+		"@picocss/pico": "^2.0.6",
 		"cookie": "^0.6.0",
 		"date-fns": "^3.6.0",
 		"formsnap": "^1.0.0",
