--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 		"@neoconfetti/svelte": "^1.0.0",
 		"@playwright/test": "^1.28.1",
 		"@sveltejs/adapter-auto": "^3.0.0",
+		"@sveltejs/adapter-node": "^5.2.0",
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^3.0.0",
 		"@types/eslint": "^8.56.0",
@@ -43,9 +44,13 @@
 	"type": "module",
 	"dependencies": {
 		"@date-fns/utc": "^1.2.0",
+		"@godaddy/terminus": "^4.12.1",
 		"cookie": "^0.6.0",
 		"date-fns": "^3.6.0",
+		"dotenv": "^16.4.5",
+		"express": "^4.19.2",
 		"formsnap": "^1.0.0",
+		"helmet": "^7.1.0",
 		"pocketbase": "^0.21.2",
 		"sveltekit-superforms": "^2.13.1",
 		"zod": "^3.23.8"
