add clean and deploy scripts

--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
 		"build": "vite build",
 		"preview": "vite preview",
 		"test": "npm run test:integration && npm run test:unit",
+		"clean": "rm -rf node_modules && rm -rf build",
+		"deploy": "npm run clean && npm install && npm run build",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
 		"lint": "prettier --check . && eslint .",
