--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
 		"@godaddy/terminus": "^4.12.1",
 		"cookie": "^0.6.0",
 		"date-fns": "^3.6.0",
+		"date-fns-tz": "^3.1.3",
 		"dotenv": "^16.4.5",
 		"express": "^4.19.2",
 		"formsnap": "^1.0.0",
