--- a/package.json
+++ b/package.json
@@ -17,48 +17,47 @@
 		"typegen": "pocketbase-typegen --env --out ./src/lib/server/db/pocketbase/types.ts"
 	},
 	"devDependencies": {
-		"@fontsource/fira-mono": "^4.5.10",
-		"@iconify-json/mdi": "^1.1.66",
-		"@neoconfetti/svelte": "^1.0.0",
-		"@playwright/test": "^1.28.1",
-		"@sveltejs/adapter-auto": "^3.2.4",
-		"@sveltejs/adapter-node": "^5.2.0",
-		"@sveltejs/kit": "^2.0.0",
-		"@sveltejs/vite-plugin-svelte": "^3.0.0",
-		"@types/eslint": "^8.56.0",
-		"@typescript-eslint/eslint-plugin": "^7.0.0",
-		"@typescript-eslint/parser": "^7.0.0",
-		"eslint": "^8.56.0",
-		"eslint-config-prettier": "^9.1.0",
-		"eslint-plugin-svelte": "^2.39.0",
-		"pocketbase-typegen": "^1.2.1",
-		"prettier": "^3.1.1",
-		"prettier-plugin-svelte": "^3.1.2",
-		"svelte": "^4.2.19",
-		"svelte-check": "^3.6.0",
-		"tslib": "^2.6.2",
-		"typescript": "^5.0.0",
-		"unplugin-icons": "^0.19.0",
-		"vite": "^5.4.6",
-		"vite-plugin-mkcert": "^1.17.5",
-		"vitest": "^1.2.0"
+		"@fontsource/fira-mono": "^5.2.5",
+		"@iconify-json/mdi": "^1.2.3",
+		"@playwright/test": "^1.51.0",
+		"@sveltejs/adapter-auto": "^4.0.0",
+		"@sveltejs/adapter-node": "^5.2.12",
+		"@sveltejs/kit": "^2.19.0",
+		"@sveltejs/vite-plugin-svelte": "^5.0.3",
+		"@types/eslint": "^9.6.1",
+		"@typescript-eslint/eslint-plugin": "^8.26.0",
+		"@typescript-eslint/parser": "^8.26.0",
+		"eslint": "^9.22.0",
+		"eslint-config-prettier": "^10.1.1",
+		"eslint-plugin-svelte": "^3.0.3",
+		"pocketbase-typegen": "^1.3.0",
+		"prettier": "^3.5.3",
+		"prettier-plugin-svelte": "^3.3.3",
+		"svelte": "^5.22.6",
+		"svelte-check": "^4.1.5",
+		"tslib": "^2.8.1",
+		"typescript": "^5.8.2",
+		"unplugin-icons": "^22.1.0",
+		"vite": "^6.2.1",
+		"vite-plugin-mkcert": "^1.17.7",
+		"vitest": "^3.0.8"
 	},
 	"type": "module",
 	"dependencies": {
-		"@date-fns/utc": "^1.2.0",
+		"@date-fns/utc": "^2.1.0",
 		"@godaddy/terminus": "^4.12.1",
-		"cookie": "^0.6.0",
-		"date-fns": "^3.6.0",
-		"date-fns-tz": "^3.1.3",
-		"dotenv": "^16.4.5",
-		"express": "^4.21.0",
-		"formsnap": "^1.0.0",
-		"helmet": "^7.1.0",
-		"pocketbase": "^0.21.2",
-		"sveltekit-superforms": "^2.13.1",
-		"zod": "^3.23.8"
+		"cookie": "^1.0.2",
+		"date-fns": "^4.1.0",
+		"date-fns-tz": "^3.2.0",
+		"dotenv": "^16.4.7",
+		"express": "^4.21.2",
+		"formsnap": "^2.0.0",
+		"helmet": "^8.0.0",
+		"pocketbase": "^0.25.2",
+		"sveltekit-superforms": "^2.23.1",
+		"zod": "^3.24.2"
 	},
 	"optionalDependencies": {
-		"@rollup/rollup-linux-x64-gnu": "4.9.5"
+		"@rollup/rollup-linux-x64-gnu": "^4.35.0"
 	}
 }
